--- a/i/index.html
+++ b/i/index.html
@@ -25,7 +25,11 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
 
-    <style>
+<style>
+  .font-noto-nastaleeq {
+    font-family: 'Noto Nastaleeq Urdu', serif;
+  }
+
       body {
         background-color: #edf6ff;
       }
@@ -290,53 +294,63 @@
           </template>
         </div>
 
-        <!-- User List -->
-        <div id="userList" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-          <template x-for="(user, index) in displayedUsers" :key="`${user.id}-${index}`">
-            <div :class="{'bg-yellow-50 border-2 border-yellow-400': user.urgent, 'bg-white': !user.urgent}"
-              class="rounded-xs shadow-md p-6 card-hover fade-in relative pb-16">
-              <div class="flex justify-between items-start">
-                <h2 class="text-xl font-semibold" x-text="user.title"></h2>
-                <p x-show="user.urgent" class="font-semibold text-white bg-red-600 rounded-full px-3 py-1 text-xs">
-                  Urgent
-                </p>
-              </div>
-              <p class="text-body-large text-gray-700 mb-2" x-text="user.body"></p>
+      <!-- User List -->
+<div id="userList" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+  <template x-for="(user, index) in displayedUsers" :key="`${user.id}-${index}`">
+    <div 
+      x-data="languageDetector(user)"
+      :class="{'bg-yellow-50 border-2 border-red-800': user.urgent, 'bg-white': !user.urgent}"
+      class="shadow-md p-6 card-hover fade-in relative pb-16">
+      
+      <div class="flex justify-between items-start">
+        <h2 
+          class="text-xl font-semibold" 
+          :class="{'font-noto-nastaleeq text-right': isUrdu, 'text-left': !isUrdu}" 
+          x-text="user.title">
+        </h2>
+        <p x-show="user.urgent" class="font-semibold text-white bg-red-600 rounded-full px-3 py-1 text-xs">
+          Urgent
+        </p>
+      </div>
+      
+      <p 
+        class="text-body-large text-gray-700 mb-2" 
+        :class="{'font-noto-nastaleeq text-right': isUrdu, 'text-left': !isUrdu}" 
+        x-text="user.body">
+      </p>
 
-              <!-- Fixed position contact buttons at the bottom -->
-              <div class="absolute bottom-0 left-0 right-0 p-4 flex justify-between space-x-4">
-                <a :href="'https://wa.me/' + user.phone" target="_blank"
-                  class="flex-1 inline-flex items-center justify-center gap-2 px-4 py-2 bg-gradient-to-r from-indigo-500 to-blue-500 text-white rounded-md hover:from-indigo-600 hover:to-blue-600 transition-all duration-300 group">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
-                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                    class="transition-transform duration-200 group-hover:scale-110">
-                    <path d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z"></path>
-                  </svg>
-                  <span>Contact</span>
-                </a>
-                <a :href="'tel:' + user.phone"
-                  class="flex-1 inline-flex items-center justify-center gap-2 px-4 py-2 bg-gradient-to-r from-gray-700 to-black text-white rounded-md hover:from-indigo-600 hover:to-blue-600 transition-all duration-300 group">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
-                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                    class="transition-transform duration-200 group-hover:scale-110">
-                    <path
-                      d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z">
-                    </path>
-                  </svg>
-                  <span>Call</span>
-                </a>
-              </div>
+      <!-- Fixed position contact buttons at the bottom -->
+      <div class="absolute bottom-0 left-0 right-0 p-4 flex justify-between space-x-4">
+        <a :href="'https://wa.me/' + user.phone" target="_blank"
+          class="flex-1 inline-flex items-center justify-center gap-2 px-4 py-2 bg-gradient-to-r from-indigo-500 to-blue-500 text-white rounded-md hover:from-indigo-600 hover:to-blue-600 transition-all duration-300 group">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
+            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+            class="transition-transform duration-200 group-hover:scale-110">
+            <path d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z"></path>
+          </svg>
+          <span>Contact</span>
+        </a>
+        <a :href="'tel:' + user.phone"
+          class="flex-1 inline-flex items-center justify-center gap-2 px-4 py-2 bg-gradient-to-r from-gray-700 to-black text-white rounded-md hover:from-indigo-600 hover:to-blue-600 transition-all duration-300 group">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
+            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+            class="transition-transform duration-200 group-hover:scale-110">
+            <path
+              d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z">
+            </path>
+          </svg>
+          <span>Call</span>
+        </a>
+      </div>
 
-              <div class="relative mt-3 text-xs font-semibold text-red-600">
-                <span x-text="'LR ID: ' + user.id"></span>
-                <span class="mx-2">•</span>
-                <span x-text="'Date: ' + new Date(user.date).toLocaleDateString()"></span>
-              </div>
-            </div>
-          </template>
-
-        </div>
-
+      <div class="relative mt-3 text-xs font-semibold text-red-600">
+        <span x-text="'LR ID: ' + user.id"></span>
+        <span class="mx-2">•</span>
+        <span x-text="'Date: ' + new Date(user.date).toLocaleDateString()"></span>
+      </div>
+    </div>
+  </template>
+</div>
 
         <div x-show="loading" class="text-center mt-8 fade-in">
           <div class="inline-block animate-spin rounded-full h-8 w-8 border-t-2 border-b-2 border-indigo-500"></div>
@@ -433,6 +447,17 @@
     </div>
 
     <script src="javascript.js"></script>
+    <script>
+  document.addEventListener('alpine:init', () => {
+    Alpine.data('languageDetector', (user) => ({
+      isUrdu: false,
+      init() {
+        const urduRegex = /[\u0600-\u06FF]/;
+        this.isUrdu = urduRegex.test(user.title) || urduRegex.test(user.body);
+      },
+    }));
+  });
+</script>
   </body>
 
 </html>
